# flock3d

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: benchmark.yml  ci.yml  lint.yml  smoke.yml
benchmarks/: CMakeLists.txt  aggregate_social_benchmark.cpp  benchmark_common.hpp  metrics_benchmark.cpp  neighbor_count_benchmark.cpp  noise_benchmark.cpp  render_benchmark.cpp  simulation_ticks_benchmark.cpp  simulation_ticks_benchmark.hpp  simulation_update_benchmark.cpp  spatial_hash_benchmark.cpp
cmake/: Flock3DDependencies.cmake  Flock3DWarnings.cmake
docs/: architecture.md  benchmarks.md  experiments.md  performance_audit.md  scenarios.md  spatial_grid_profile.md  spatial_grid_proposal.md
include/flock3d/app/: ControlCommands.hpp  ControlHelpers.hpp  FixedUpdateLoop.hpp  OverlayLayout.hpp
include/flock3d/experiment/: ExperimentRunner.hpp  MetricsExport.hpp
include/flock3d/math/: Vec3.hpp
include/flock3d/sim/: BoidSimulation.hpp  NeighborSelection.hpp  Scenario.hpp  SimulationMetrics.hpp  SimulationParameters.hpp  SpatialGrid3D.hpp  SpatialHash3D.hpp
resources/: README.md
results/: README.md
results/birdflight/: birdflight_fov_sweep.csv  birdflight_turn_rate_sweep.csv
results/fishschool/: fishschool_drag_sweep.csv
results/noise/: noise_steering_sweep.csv
scripts/: build.sh  compare_sweeps.py  plot_benchmarks.py  plot_benchmarks.sh  plot_metric.py  run.sh  run_benchmark.sh  run_birdflight_study.sh  run_fishschool_study.sh  run_noise_study.sh  study_common.sh  summarize_benchmarks.py  tests.sh
src/: CMakeLists.txt
src/app/: Application.cpp  Application.hpp  CMakeLists.txt  CameraController.cpp  CameraController.hpp  DebugControls.cpp  DebugControls.hpp  SimulationControls.cpp  SimulationControls.hpp  main.cpp
src/experiment/: CMakeLists.txt  ExperimentRunner.cpp  MetricsExport.cpp  main.cpp
src/math/: Vec3.hpp
src/render/: BoidRenderer.cpp  BoidRenderer.hpp  CMakeLists.txt
src/sim/: BoidSimulation.cpp  BoidSimulation.hpp  CMakeLists.txt  NeighborSelection.cpp  Scenario.cpp  SimulationParameters.hpp  SpatialGrid3D.cpp  SpatialHash3D.cpp
tests/: CMakeLists.txt  test_benchmarks.cpp  test_controls.cpp  test_experiment.cpp  test_simulation.cpp  test_spatial_grid.cpp  test_spatial_hash.cpp
